Fixed: overflow bug in sidebar, Fixed: box-shadow at icon search, Fixed: dead npm link, Fixed: wrong api at terra-checkbox-tree, Updated: terra-components version, Updated: examples code to new code conventions,

--- a/src/app/views/icons/iconview/icon-view.component.glob.scss
+++ b/src/app/views/icons/iconview/icon-view.component.glob.scss
@@ -23,8 +23,8 @@ iconview
     }
     .icon-search-container .portlet .portlet_body
     {
-        border-radius: 0 !important;
-        box-shadow: 3px 3px 6px lightgray;
+        border-radius: 2px !important;
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.04);
     }
 }
 
