--- a/src/app/views/icons/sidebar/icon-sidebar.component.scss
+++ b/src/app/views/icons/sidebar/icon-sidebar.component.scss
@@ -30,19 +30,16 @@
     margin: 0;
     li
     {
-        height: 30px;
         font-size: 15px;
         font-weight: normal;
         padding: 5px 20px 5px 20px;
-        white-space: nowrap;
+        overflow: hidden;
         .icon-name
         {
             display: inline-block;
             vertical-align: middle;
             font-family: inherit !important;
             max-width: 180px;
-            text-overflow: ellipsis;
-            overflow: hidden;
         }
         .icon
         {
@@ -61,11 +58,6 @@
                 margin-left: -10px;
                 font-size: 25px;
             }
-        }
-        a
-        {
-            text-transform: capitalize;
-            text-decoration: none;
         }
     }
 }
